--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 
 # npm
 node_modules
-package-lock.json
 
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
@@ -18,3 +17,6 @@ main.js
 
 # obsidian
 data.json
+
+# Exclude macOS Finder (System Explorer) View States
+.DS_Store
