--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "obsidian-custom-attachment-location",
 	"name": "Custom Attachment Location",
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"minAppVersion": "0.12.17",
-	"description": "Customize attachment location with variables($filename, $data, etc) like typora.",
-	"author": "RainCat1998",
-	"authorUrl": "https://github.com/RainCat1998",
+	"description": "Customize attachment location with variables($filepath, $filename, $data, etc) like typora.",
+	"author": "3fok",
+	"authorUrl": "https://github.com/3fok",
 	"isDesktopOnly": true
 }
